--- a/GitSearch/View/Base.lproj/Main.storyboard
+++ b/GitSearch/View/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Idf-pG-ETf">
                                 <rect key="frame" x="10" y="150" width="355" height="83.666666666666686"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Search Repo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KTR-vd-PIq">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Repo Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KTR-vd-PIq">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="28.666666666666668"/>
                                         <color key="backgroundColor" systemColor="systemFillColor"/>
                                         <color key="tintColor" systemColor="labelColor"/>
@@ -28,14 +28,11 @@
                                         <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ckj-He-Vaf">
-                                        <rect key="frame" x="127.66666666666666" y="41.666666666666657" width="100" height="42"/>
+                                        <rect key="frame" x="123" y="41.666666666666657" width="109" height="42"/>
                                         <color key="backgroundColor" systemColor="placeholderTextColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="3mm-t7-02r"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="black" pointSize="25"/>
                                         <color key="tintColor" systemColor="labelColor"/>
-                                        <state key="normal" title="Search"/>
+                                        <state key="normal" title="  Search  "/>
                                         <connections>
                                             <action selector="searchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iLR-Zx-yzh"/>
                                         </connections>
@@ -192,13 +189,10 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLG-Uw-QiC" userLabel="Close">
-                                <rect key="frame" x="137.66666666666666" y="386.66666666666669" width="100" height="42"/>
+                                <rect key="frame" x="141.66666666666666" y="386.66666666666669" width="92" height="42"/>
                                 <color key="backgroundColor" systemColor="placeholderTextColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="e99-JX-lMk"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="25"/>
-                                <state key="normal" title="Close">
+                                <state key="normal" title="  Close  ">
                                     <color key="titleColor" systemColor="labelColor"/>
                                 </state>
                                 <connections>
